--- a/prochains-articles/quelle-machine-latte-art-maison-0.mdx
+++ b/prochains-articles/quelle-machine-latte-art-maison-0.mdx
@@ -2,7 +2,7 @@
 title: "Quelle machine espresso choisir pour réussir le latte art à la maison ?"
 description: "Les caractéristiques indispensables (vapeur, stabilité, ergonomie) + des machines abordables qui permettent vraiment de texturer le lait."
 date: "2026-02-09"
-coverImage: "images/machine-a-cafe.png"
+coverImage: "/images/machine-espresso-latte.jpg"
 tags: ["Latte Art", "Matériel"]
 difficulty: "débutant"
 ---
@@ -192,5 +192,3 @@ En pratique, pour “pas trop cher”, les choix les plus simples sont :
 - **Dedica Arte EC885** (compacte, bonne porte d’entrée), [oai_citation:20‡Maxicoffee](https://www.maxicoffee.com/machine-expresso-dedica-arte-ec885m-full-metal-pack-barista-p-159674.html?utm_source=chatgpt.com)
 - **Lelit Anna PL41TEM** (niveau au-dessus, stable, très formateur). [oai_citation:21‡Coffeeness](https://www.coffeeness.de/en/lelit-anna-review/?utm_source=chatgpt.com)
 
-Si tu veux, je peux te générer l’article suivant (toujours en MDX) :
-**“Texturer le lait chez soi : méthode barista simple (sons, bulles, vortex) + exercices de 7 jours”**.
