correction typos dans un post

--- a/src/content/posts/quelle-machine-latte-art-maison.mdx
+++ b/src/content/posts/quelle-machine-latte-art-maison.mdx
@@ -77,9 +77,9 @@ Plus l'utilisation est facile, plus tu prends plaisir à pratiquer. Plus tu prat
 - [ ] Taille de la machine, en fonction de la place dont tu disposes (pense aussi aux accessoires)
 
 ## Dernières recommandations pour le choix d'une machine pour la maison
-Que ton budget soit serrée ou plus confortable, tu trouveras sur le marche des machines adaptées au latte art à la maison. 
+Que ton budget soit serré ou plus confortable, tu trouveras sur le marche des machines adaptées au latte art à la maison. 
 
-Il existe des machines d'entrée de gamme, dans la gamme 300-320 €, qui offrent une buse vapeur correcte et offrent une bonne expérience pour débuter. Elles sont parfaites pour apprendre la micro-mousse sans se ruiner.
+Il existe des machines d'entrée de gamme, dans la fourchette 300-320 €, qui offrent une buse vapeur correcte et offrent une bonne expérience pour débuter. Elles sont parfaites pour apprendre la micro-mousse sans se ruiner.
 Ces machines conviennent très bien si tu veux pratique souvent, que tu as peu de place et que tu acceptes un format compact avec quelques compromis.
 
 **À savoir :**
@@ -112,4 +112,5 @@ Car il faut savoir que même la meilleure machine ne compensera pas un café mou
 
 Si ton objectif est **le latte art à la maison**, choisis une machine d’abord pour sa **buse vapeur** (contrôle + puissance + régularité), puis pour son **ergonomie** (tu vas répéter).
 En pratique, pour “pas trop cher”, il existe de machines d'entrée de gamme qui font très bien le job pour débuter et progresser, à condition de les utiliser avec une méthode simple, et de ne pas chercher à faire du latte art ou des motifs parfaits des les premiers essais. Tu vas avoir besoin de pratique et d'un peu de patience, mais tu verras que les résultats seront au rendrez-vous si tu pratiques régulièrement.
+
 N'oublie pas enfin que la buse doit toujours rester propre, et qu'avant et après chaque utilisation, un petit coup de vapeur et un peu chiffon propre te permettront de garder une bonne permormance dans la durée.
