ajout contenu boite niveau

--- a/src/content/posts/maitriser-texturage-lait.mdx
+++ b/src/content/posts/maitriser-texturage-lait.mdx
@@ -5,7 +5,7 @@ date: "2026-02-06"
 difficulty: "Débutant"
 coverImage: "/images/texturage-lait.jpg"
 coverImageAlt: "Mousse de lait parfaitement texturée dans un pichet"
-tags: ["Technique", "Lait", "Bases"]
+tags: ["Technique de base", "Lait"]
 ---
 
 Le texturage du lait est **la compétence fondamentale** du latte art. Peu importe votre talent pour dessiner, sans une bonne texture de lait, vos motifs ne se formeront jamais correctement. Bonne nouvelle : c'est une technique qui s'apprend avec de la méthode et de la pratique.
