--- a/src/content/posts/quelle-machine-latte-art-maison.mdx
+++ b/src/content/posts/quelle-machine-latte-art-maison.mdx
@@ -3,8 +3,8 @@ title: "Quelle machine espresso choisir pour réussir le latte art à la maison 
 description: "Les caractéristiques indispensables (vapeur, stabilité, ergonomie) des machines qui permettent vraiment de texturer le lait."
 date: "2026-01-08"
 coverImage: "/images/machine-espresso-latte.jpg"
-tags: ["Latte Art", "Matériel"]
-difficulty: "débutant"
+tags: ["Matériel"]
+difficulty: "Débutant"
 ---
 
 ## A retenir
